--- a/src/org/cict/evaluation/missing-info.fxml
+++ b/src/org/cict/evaluation/missing-info.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="430.0" prefWidth="460.0" style="-fx-background-color: #46CDAC;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="vbox_main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="492.0" prefWidth="457.0" style="-fx-background-color: #46CDAC;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="CENTER">
          <children>
@@ -17,7 +17,7 @@
                <children>
                   <Label text="New Student Wizard" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="25.0" />
+                        <Font size="28.0" />
                      </font>
                      <VBox.margin>
                         <Insets />
@@ -29,12 +29,15 @@
                <font>
                   <Font name="System Bold" size="41.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
             </Label>
             <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Label text="Type" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="15.0" />
+                        <Font size="20.0" />
                      </font>
                   </Label>
                   <TextField fx:id="txt_type" editable="false" prefHeight="9.0" prefWidth="195.0">
@@ -46,11 +49,11 @@
             </HBox>
          </children>
       </VBox>
-      <VBox alignment="CENTER" spacing="5.0">
+      <VBox alignment="CENTER" spacing="5.0" style="-fx-border-color: white;">
          <children>
             <Label text="Curriculum" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font size="20.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmb_curriculum" prefHeight="25.0" prefWidth="255.0" style="-fx-background-color: white;">
@@ -60,7 +63,7 @@
             </ComboBox>
             <Label text="Year Level " textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font size="20.0" />
                </font>
             </Label>
             <ComboBox fx:id="cmb_year_level" prefHeight="25.0" prefWidth="255.0" style="-fx-background-color: white;">
@@ -74,7 +77,7 @@
                      <children>
                         <Label prefWidth="150.0" text="Section" textFill="WHITE">
                            <font>
-                              <Font name="System Bold" size="20.0" />
+                              <Font size="20.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_section" alignment="CENTER">
@@ -88,7 +91,7 @@
                      <children>
                         <Label text="Group" textFill="WHITE">
                            <font>
-                              <Font name="System Bold" size="20.0" />
+                              <Font size="20.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txt_group" alignment="CENTER">
@@ -109,6 +112,12 @@
                </VBox.margin>
             </JFXButton>
          </children>
+         <VBox.margin>
+            <Insets left="20.0" right="20.0" top="10.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="20.0" top="20.0" />
+         </padding>
       </VBox>
    </children>
    <padding>
