--- a/src/update3/org/cict/access/management/AccessManagementHome.fxml
+++ b/src/update3/org/cict/access/management/AccessManagementHome.fxml
@@ -322,7 +322,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_admin" prefHeight="200.0" prefWidth="100.0" visible="false">
+                  <VBox fx:id="vbox_admin" prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -331,12 +331,29 @@
                                     <Image url="@images/Admin_48px.png" />
                                  </image>
                               </ImageView>
-                              <Label text="System Administrator">
+                              <Label maxWidth="1.7976931348623157E308" text="System Administrator" HBox.hgrow="ALWAYS">
                                  <font>
                                     <Font size="30.0" />
                                  </font>
                               </Label>
+                              <VBox spacing="10.0">
+                                 <children>
+                                    <Label fx:id="lbl_cluster_admin" text="NO LOCAL REGISTRAR FOUND" />
+                                    <JFXButton fx:id="btn_change_cluster_admin" graphicTextGap="10.0" prefHeight="20.0" prefWidth="178.0" style="-fx-border-color: white;" text="Change Cluster" textFill="WHITE">
+                                       <graphic>
+                                          <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/settings.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </JFXButton>
+                                 </children>
+                              </VBox>
                            </children>
+                           <VBox.margin>
+                              <Insets right="20.0" />
+                           </VBox.margin>
                         </HBox>
                         <VBox spacing="10.0">
                            <children>
@@ -551,7 +568,7 @@
                         <Insets left="20.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="vbox_local_registrar" prefHeight="200.0" prefWidth="100.0">
+                  <VBox fx:id="vbox_local_registrar" prefHeight="200.0" prefWidth="100.0" visible="false">
                      <children>
                         <HBox alignment="CENTER_LEFT" prefWidth="200.0" spacing="10.0">
                            <children>
@@ -560,12 +577,29 @@
                                     <Image url="@images/registrar.png" />
                                  </image>
                               </ImageView>
-                              <Label text="Local Registrar">
+                              <Label maxWidth="1.7976931348623157E308" text="Local Registrar" HBox.hgrow="ALWAYS">
                                  <font>
                                     <Font size="30.0" />
                                  </font>
                               </Label>
+                              <VBox spacing="10.0">
+                                 <children>
+                                    <Label fx:id="lbl_cluster_local_reg" text="CLUSTER 1" />
+                                    <JFXButton fx:id="btn_change_cluster_local_reg" graphicTextGap="10.0" prefHeight="0.0" prefWidth="178.0" style="-fx-border-color: white;" text="Change Cluster" textFill="WHITE">
+                                       <graphic>
+                                          <ImageView fitHeight="20.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/settings.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </JFXButton>
+                                 </children>
+                              </VBox>
                            </children>
+                           <VBox.margin>
+                              <Insets right="20.0" />
+                           </VBox.margin>
                         </HBox>
                         <VBox spacing="10.0">
                            <children>
