--- a/src/org/cict/reports/PageSizeChooser.fxml
+++ b/src/org/cict/reports/PageSizeChooser.fxml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="482.0" spacing="20.0" style="-fx-background-color: #F9A11F;" stylesheets="@metro-ui.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="application_root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="199.0" prefWidth="530.0" spacing="20.0" style="-fx-background-color: #F9A11F;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox>
+      <VBox>
          <children>
-            <Label maxWidth="1.7976931348623157E308" text="Paper Size Chooser" HBox.hgrow="ALWAYS">
+            <Label maxWidth="1.7976931348623157E308" text="Paper Size Chooser">
                <font>
                   <Font size="25.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </Label>
          </children>
-      </HBox>
-      <HBox spacing="20.0">
+      </VBox>
+      <HBox alignment="CENTER" spacing="20.0">
          <children>
             <JFXButton fx:id="btn_short" prefWidth="141.0" style="-fx-border-color: white;" text="Short Paper" textFill="WHITE">
                <font>
@@ -37,13 +41,21 @@
             </JFXButton>
          </children>
       </HBox>
-      <JFXButton fx:id="btn_cancel" prefHeight="33.0" prefWidth="451.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </JFXButton>
+      <VBox alignment="CENTER">
+         <children>
+            <JFXButton fx:id="btn_cancel" prefHeight="33.0" prefWidth="464.0" style="-fx-border-color: white;" text="Cancel" textFill="WHITE">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </JFXButton>
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
+   <stylesheets>
+      <URL value="@metro-ui.css" />
+      <URL value="@metro-ui-table.css" />
+   </stylesheets>
 </VBox>
